[package]
name = "rust_update_comic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "4.0"
indicatif = "0.17.0"
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.29"
log = "0.4"
env_logger = "0.10.1"
filetime = "0.2"
system_shutdown = "4.0.1"
tokio = { version = "1", features = ["full"] }
notify-rust = "4"
tempfile = "3.2.0"
